<resources>
    <string name="app_name">Notification</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="channel_description">channel_description</string>
    <string name="channel_name">channel_name</string>

    <string name="show_simple_notification">simple notification</string>
    <string name="progress_notification">progress Notification</string>
    <string name="indeterminate_progress_notification">indeterminate progress notification</string>
    <string name="expandable_picture_notification">expandable picture notification</string>
    <string name="expandable_text_notification">expandable text notification</string>
    <string name="group_notification">group notification</string>
    <string name="action_notification">action notification</string>
    <string name="content_notification">content notification</string>

    <string name="action">action</string>
    <string name="notification_chanel">notification chanel</string>
</resources>